FIX | overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   font-family: var(--jost-font), -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: var(--white-color);
+  overflow-x: hidden;
 }
 
 a {
